--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
     "openai": "^4.58.1",
+    "sharp": "^0.33.5",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
